--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
 
-  <name>mavenJenkinsTest111</name>
+  <name>mavenJenkinsTes</name>
 
 </project>
 
